# dreki

./: Cargo.toml  README.md
crates/dreki/: Cargo.toml
crates/dreki-telemetry/: Cargo.toml
crates/dreki-telemetry/src/: main.rs
crates/dreki/examples/: 2d.rs  3d.rs  animation.rs  audio.rs  hot_reload.rs  physics_2d.rs  physics_3d.rs  scene_hierarchy.rs  scene_save_load.rs  scene_switching.rs  shapes_2d.rs  shapes_3d.rs  text.rs
crates/dreki/src/: app.rs  asset.rs  audio.rs  diag.rs  input.rs  lib.rs  math.rs  physics2d.rs  physics3d.rs  prelude.rs  scene.rs  time.rs  window.rs
crates/dreki/src/ecs/: component.rs  hierarchy.rs  mod.rs  system.rs  world.rs
crates/dreki/src/render/: gpu.rs  mod.rs  pass.rs
crates/dreki/src/render2d/: batch.rs  draw.rs  mod.rs  pipeline.rs  shader.wgsl  texture.rs
crates/dreki/src/render3d/: mod.rs  shapes.rs  texture.rs  vertex.rs
crates/kera/: Cargo.toml
crates/kera-telemetry/: Cargo.toml
crates/kera-telemetry/src/: main.rs
crates/kera/examples/: 2d.rs  3d.rs  animation.rs  audio.rs  hot_reload.rs  physics_2d.rs  physics_3d.rs  shapes_2d.rs  shapes_3d.rs  text.rs
crates/kera/src/: animation.rs  app.rs  audio.rs  diag.rs  lib.rs  physics2d.rs  physics3d.rs  prelude.rs
crates/kera/src/ecs/: component.rs  entity.rs  world.rs
crates/kera/src/render/: gpu.rs  pass.rs
crates/kera/src/render2d/: debug_wireframe.rs  debug_wireframe.wgsl  draw.rs  font.rs  vertex.rs
crates/kera/src/render3d/: collect.rs  debug_wireframe.rs  debug_wireframe.wgsl  draw.rs  gltf.rs  mesh.rs  shader.wgsl  shape.rs
crates/necs/: Cargo.toml
crates/necs-telemetry/: Cargo.toml
crates/necs-telemetry/src/: main.rs
crates/necs/examples/: 2d.rs  3d.rs  animation.rs  audio.rs  editor_2d.rs  editor_3d.rs  hot_reload.rs  physics_2d.rs  physics_3d.rs  scene_builder.rs  scene_hierarchy.rs  scene_save_load.rs  scene_switching.rs  shapes_2d.rs  shapes_3d.rs  text.rs
crates/necs/src/: animation.rs  audio.rs  context.rs  diag.rs  game.rs  lib.rs  physics2d.rs  physics3d.rs  prelude.rs  scene.rs  scene_builder.rs  time.rs  window.rs
crates/necs/src/ecs/: archetype.rs  component.rs  mod.rs  query.rs  world.rs
crates/necs/src/editor/: hierarchy.rs  inspector.rs  mod.rs  toolbar.rs
crates/necs/src/render/: gpu.rs  pass.rs
crates/necs/src/render2d/: batch.rs  draw.rs  mod.rs  shapes.rs
crates/necs/src/render3d/: collect.rs  draw.rs  mod.rs  pipeline.rs
