[package]
name = "kera"
version = "0.1.0"
edition = "2024"

[features]
default = ["render2d", "render3d", "diagnostics"]
full = ["render2d", "render3d", "audio", "physics2d", "physics3d", "diagnostics"]
render2d = ["dep:fontdue"]
render3d = ["dep:gltf"]
diagnostics = []
audio = ["dep:kira"]
physics2d = ["dep:rapier2d"]
physics3d = ["dep:rapier3d"]
editor = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
winit = "0.30"
wgpu = "27"
pollster = "0.4"
glam = "0.30"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
bytemuck = { version = "1", features = ["derive"] }
notify = { version = "8", features = ["macos_fsevent"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gltf = { version = "1", optional = true }
fontdue = { version = "0.9", optional = true }
rapier2d = { version = "0.32", optional = true, features = ["simd-stable"] }
rapier3d = { version = "0.32", optional = true, features = ["simd-stable"] }
kira = { version = "0.11", optional = true, default-features = false, features = ["cpal", "ogg", "wav", "mp3", "flac"] }

# Editor (optional)
egui = { version = "0.33", optional = true }
egui-wgpu = { version = "0.33", optional = true }
egui-winit = { version = "0.33", optional = true }

[[example]]
name = "2d"

[[example]]
name = "3d"

[[example]]
name = "hot_reload"

[[example]]
name = "animation"

[[example]]
name = "text"

[[example]]
name = "shapes_2d"

[[example]]
name = "shapes_3d"

[[example]]
name = "physics_2d"
required-features = ["physics2d", "render2d"]

[[example]]
name = "physics_3d"
required-features = ["physics3d", "render3d"]

[[example]]
name = "audio"
required-features = ["audio", "render2d"]
